NXP-33220: cleanup / format